--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query-devtools": "^5.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "device-detector-js": "^3.0.3",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.396.0",
     "react": "^18.3.1",
